--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,5 +4,5 @@ main: de.crafttogether.TCDestinations
 api-version: 1.17
 depend: [ BKCommonLib, Train_Carts ]
 authors: [ J0schlZ, Ceddix ]
-description: Managing destinations in a more advanced way.
+description: TrainCarts-Addon which allows you to manage destinations in a more advanced way.
 website: https://github.com/CraftTogetherMC
