--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>jar</packaging>
 
     <name>TCDestinations</name>
-    <description>Managing destinations in a more advanced way.</description>
+    <description>TrainCarts-Addon which allows you to manage destinations in a more advanced way.</description>
     <url>https://github.com/CraftTogetherMC/TCDestinations</url>
 
     <properties>
