--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ version: '${project.version}'
 main: de.crafttogether.TCDestinations
 api-version: 1.17
 depend: [ BKCommonLib, Train_Carts ]
+softdepend: [ dynmap ]
 authors: [ J0schlZ, Ceddix ]
 description: TrainCarts-Addon which allows you to manage destinations in a more advanced way.
 website: https://github.com/CraftTogetherMC
