--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,12 @@
 Settings:
   ServerName: lobby
   Debug: false
+  Updates:
+    DisableNotifications: false
+    CheckForDevBuilds: true
+    Notify:
+      Console: true
+      InGame: true
 
 MySQL:
   Host: 127.0.0.1
