--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,6 @@
 name: TCDestinations
 version: '${project.version}'
+build: '${project.build.number}'
 main: de.crafttogether.TCDestinations
 api-version: 1.17
 depend: [ BKCommonLib, Train_Carts ]
