--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
 
         <resources>
             <resource>
-                <directory>src/main/java</directory>
+                <directory>src/main/resources</directory>
                 <filtering>true</filtering>
                 <includes>
                     <include>plugin.yml</include>
