--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,7 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Cloud Command Framework -->
