--- a/src/main/resources/commands.yml
+++ b/src/main/resources/commands.yml
@@ -1,4 +1,5 @@
-# In this file you can rename the root name of commands
+#> In this file you can rename the root name of commands
+#>
 commands:
   destination: destination
   destinations: destinations
