Moved all common stuff to a new plugin/library called: CTCommons. Reduced filesize of this plugin about 5 MB

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,6 @@
 Settings:
   ServerName: lobby # Used to identify the server in a BungeeCord network
+  Language: en_EN
   Updates:
     DisableNotifications: false
     CheckForDevBuilds: true
