--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.crafttogether</groupId>
     <artifactId>TCDestinations</artifactId>
-    <version>1.0-BETA</version>
+    <version>1.0-BETA2</version>
     <packaging>jar</packaging>
 
     <name>TCDestinations</name>
