--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -16,7 +16,7 @@ MySQL:
   Username: username
   Password: password
   TablePrefix: tc_
-  JDBCArgs: useSSL=true&trustServerCertificate=true
+  JDBCArgs: sslMode=true
 
 # Here you can customize destination-types
 # At this time it is not possible to use whitespaces in displayNames
