--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: ${project.version}
 build: ${project.build.number}
 main: de.crafttogether.TCDestinations
 api-version: 1.17
-depend: [ CTCommons, BKCommonLib, Train_Carts ]
+depend: [ CTCommonsBukkit, BKCommonLib, Train_Carts ]
 softdepend: [ dynmap ]
 authors: [ J0schlZ, Ceddix ]
 description: TrainCarts-Addon which allows you to manage destinations in a more advanced way.
